Replace eventsource with fetch event source for authentication purpose